Add css styling to the web-site

--- a/index.html
+++ b/index.html
@@ -8,42 +8,38 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 </head>
 <body>
-  <article>
-    <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">
-      <div class="head">
-        <h2>Dung Beetle</h2>
-        <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
-      </div>
+  <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">
+    <h2>Dung Beetle</h2>
+    <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
 
-      <div class="list">
-        <dl class="list-style">
-          <dt>Kingdom:</dt>
-          <dd>Animalia</dd>
+    <div class="list">
+      <dl>
+        <dt>Kingdom</dt>
+        <dd>Animalia</dd>
 
-          <dt>Phylum:</dt>
-          <dd>Arthropoda</dd>
+        <dt>Phylum</dt>
+        <dd>Arthropoda</dd>
 
-          <dt>Class:</dt>
-          <dd>Insecta</dd>
+        <dt>Class</dt>
+        <dd>Insecta</dd>
 
-          <dt>Order:</dt>
-          <dd>Coleoptera</dd>
+        <dt>Order</dt>
+        <dd>Coleoptera</dd>
 
-          <dt>Suborder:</dt>
-          <dd>Polyphaga</dd>
+        <dt>Suborder</dt>
+        <dd>Polyphaga</dd>
 
-          <dt>Superfamily:</dt>
-          <dd>Scarabaeoidea</dd>
+        <dt>Superfamily</dt>
+        <dd>Scarabaeoidea</dd>
 
-          <dt>Family:</dt>
-          <dd>Scarabidae</dd>
-        </dl>
-      </div>
+        <dt>Family</dt>
+        <dd>Scarabidae</dd>
+      </dl>
+    </div>
 
-      <div class="btn">
-        <span>Learn more…</span>
-      </div>
-    </a>
-  </article>
+    <div class="btn">
+      <span>Learn more…</span>
+    </div>
+  </a>
 </body>
 </html>
